--- a/MPCFBandwidthTestApp/Base.lproj/Main.storyboard
+++ b/MPCFBandwidthTestApp/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 <state key="normal" title="Start advertising"/>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fFh-Es-EoY">
-                                <rect key="frame" x="139" y="224.5" width="97" height="30"/>
+                                <rect key="frame" x="139" y="262.5" width="97" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="97" id="5fR-Nd-WMK"/>
                                 </constraints>
@@ -37,13 +37,13 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount of data (MBs):" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hP6-cu-3ba">
-                                <rect key="frame" x="101.5" y="196" width="172.5" height="20.5"/>
+                                <rect key="frame" x="101.5" y="234" width="172.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gF7-NN-jfT">
-                                <rect key="frame" x="169.5" y="262.5" width="36" height="30"/>
+                                <rect key="frame" x="169.5" y="300.5" width="36" height="30"/>
                                 <state key="normal" title="Send"/>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="esh-X1-fV3">
@@ -79,21 +79,27 @@
                                 <rect key="frame" x="227" y="28" width="132" height="30"/>
                                 <state key="normal" title="Connect to session"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3cu-g7-Bp5">
+                                <rect key="frame" x="143" y="194" width="89" height="30"/>
+                                <state key="normal" title="Open stream"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="leadingMargin" secondItem="iRK-VA-JFR" secondAttribute="leading" id="5P3-LF-bbC"/>
                             <constraint firstItem="esh-X1-fV3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9AN-rj-LCo"/>
+                            <constraint firstItem="hP6-cu-3ba" firstAttribute="top" secondItem="3cu-g7-Bp5" secondAttribute="bottom" constant="10" id="LGq-3d-8Qc"/>
                             <constraint firstItem="cp1-Mw-Kes" firstAttribute="top" secondItem="iRK-VA-JFR" secondAttribute="top" id="P6g-Z9-9zQ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="cp1-Mw-Kes" secondAttribute="trailing" id="Q7f-LL-NSA"/>
                             <constraint firstItem="esh-X1-fV3" firstAttribute="top" secondItem="iRK-VA-JFR" secondAttribute="bottom" constant="8" id="Was-pS-zzj"/>
+                            <constraint firstItem="3cu-g7-Bp5" firstAttribute="centerX" secondItem="esh-X1-fV3" secondAttribute="centerX" id="b7G-uq-g3w"/>
                             <constraint firstItem="fFh-Es-EoY" firstAttribute="centerX" secondItem="hP6-cu-3ba" secondAttribute="centerX" id="bQ8-B7-qu2"/>
                             <constraint firstItem="iRK-VA-JFR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="bxB-LV-MRM"/>
-                            <constraint firstItem="hP6-cu-3ba" firstAttribute="top" secondItem="esh-X1-fV3" secondAttribute="bottom" constant="10" id="dTx-g7-jez"/>
                             <constraint firstItem="hP6-cu-3ba" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gdj-px-O2a"/>
                             <constraint firstItem="fFh-Es-EoY" firstAttribute="top" secondItem="hP6-cu-3ba" secondAttribute="bottom" constant="8" id="lxB-U4-K1M"/>
                             <constraint firstItem="gF7-NN-jfT" firstAttribute="centerX" secondItem="fFh-Es-EoY" secondAttribute="centerX" id="mcn-gr-dUN"/>
                             <constraint firstItem="cp1-Mw-Kes" firstAttribute="centerY" secondItem="iRK-VA-JFR" secondAttribute="centerY" id="uAe-Tp-fsZ"/>
+                            <constraint firstItem="3cu-g7-Bp5" firstAttribute="top" secondItem="esh-X1-fV3" secondAttribute="bottom" constant="8" id="ugM-Sl-z9e"/>
                             <constraint firstItem="gF7-NN-jfT" firstAttribute="top" secondItem="fFh-Es-EoY" secondAttribute="bottom" constant="8" id="xzM-ah-dX4"/>
                         </constraints>
                     </view>
@@ -102,6 +108,7 @@
                         <outlet property="connectButton" destination="cp1-Mw-Kes" id="Fv7-Qp-gGO"/>
                         <outlet property="connectionsNumberLabel" destination="xoa-lJ-mQD" id="PfQ-Fr-gzm"/>
                         <outlet property="dataTextField" destination="fFh-Es-EoY" id="E8p-bu-Nof"/>
+                        <outlet property="openSteamButton" destination="3cu-g7-Bp5" id="Wme-Ge-ZQj"/>
                         <outlet property="sendDataButton" destination="gF7-NN-jfT" id="PDb-Fp-6eq"/>
                     </connections>
                 </viewController>
